Added a navigation bar to the views of login + index in @application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,32 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <%= yield %>
+    <div class="ui small inverted menu">
+      <div class="ui container">
+        <a class="item">
+          Home
+        </a>
+        <a class="item">
+          Messages
+        </a>
+        <div class="right menu">
+          <div class="ui dropdown item">
+            Language <i class="dropdown icon"></i>
+            <div class="menu">
+              <a class="item">English</a>
+              <a class="item">Russian</a>
+              <a class="item">Spanish</a>
+            </div>
+          </div>
+          <div class="item">
+              <div class="ui primary button">Sign Up</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="ui container">
+      <%= yield %>
+    </div>
   </body>
 </html>
